# native-vs-framework

./: README.md
docs/: architecture.drawio  design-document.docx  design.docx
src/cpp-autoclicker/: CMakeLists.txt
src/cpp-autoclicker/src/: main.cpp
src/cpp-autoclicker/src/controler/: AutoClickController.cpp  AutoClickController.h
src/cpp-autoclicker/src/helpers/: win32Helpers.cpp  win32Helpers.h
src/cpp-autoclicker/src/structs/: AutoClickControllerConfig.h
src/cpp-autoclicker/src/view/: view.cpp  view.h  wndAbout.cpp  wndAbout.h  wndMain.cpp  wndMain.h
src/csharp-autoclicker/: Main.cs  csharp-autoclicker.csproj  csharp-autoclicker.sln
src/csharp-autoclicker/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/csharp-autoclicker/controller/: AutoClickerController.cs
src/csharp-autoclicker/model/: AutoClickerConfiguration.cs  MouseButton.cs
src/csharp-autoclicker/view/: WndAbout.Designer.cs  WndAbout.cs  WndMain.Designer.cs  WndMain.cs  WndMain.en-US.resx  WndMain.resx
